--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -17,8 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RatingBar
-            android:id="@+id/ratingBar"
+        <ImageView
+            android:id="@+id/starImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="1"
@@ -34,11 +34,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
-            app:layout_constraintEnd_toStartOf="@+id/ratingBar"
+            app:layout_constraintBottom_toBottomOf="@+id/starImageView"
+            app:layout_constraintEnd_toStartOf="@+id/starImageView"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ratingBar"
+            app:layout_constraintTop_toTopOf="@+id/starImageView"
             tools:text="Title" />
 
         <TextView
@@ -51,8 +51,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-            tools:text="Bodyasd oahdskjasd,j ;laslkdjjka hsdkan kjhadsjkhag sdasdlkha skb ksdh ka hdkajsd kjahd kajgdjkagsdkjga sdhaksdhk ajgds mhagsdagdskjasdhlahds lkahsd" />
+            app:layout_constraintTop_toBottomOf="@+id/starImageView"
+            tools:text="Body" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
